refactor(test): Optimisation pour éviter le DRY.